# realtime-melspectrogram

./: .gitignore  README.md  pyproject.toml
src/: audio_stream.py  config.py  melspectrogram_viewer.py  run.py
