[project]
name = "realtime-melspectrogram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.3.4",
    "pyaudio>=0.2.14",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
]

[project.scripts]
run-spec = "src.run:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]
